templates/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name:
spec:
  replicas:
  selector:
    matchLabels:
      app:
  template:
    metadata:
      labels:
        app:
    spec:
      containers:
      - name:
        image:
        imagePullPolicy: Never
