templates/pod.yaml
---
kind: Pod
apiVersion: v1
metadata:
  name: 
  labels:
    app:
spec:
  containers:
  - name:
    image:
    imagePullPolicy: Never
