templates/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name:
spec:
  type: LoadBalancer
  selector:
    app:
  ports:
    - protocol: TCP
      port: 
      targetPort:
